# django-bootstrap-sidebar

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  makefile  setup.cfg
bootstrap-theme/: .gitignore  custom.scss  gfontsdw.js  gfontsdw.py  package-lock.json  package.json
bootstrapsidebar/: apps.py
bootstrapsidebar/static/: layout.css
bootstrapsidebar/templates/: 403.html  404.html  500.html  bootstrap_base.html  bootstrap_popovers.html
bootstrapsidebar/templates/registration/: login.html  password_change_form.html
bootstrapsidebar/templates/snippets/: show_err.html  show_messages.html
example/: Makefile  README.md  requirements.txt  settings.py  urls.py  views.py
example/app/management/commands/: create1234superuser.py
example/app/templates/: about.html  demo_base.html  errors.html  forms.html  home.html  popovers.html
