[metadata]
name = django-bootstrap-sidebar
version = 1.0.2
author = Paulino Ruiz de Clavijo Vázquez
author_email = pruiz@us.es
description = Bootstrap 5.1 template for django 4
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paulino/django-bootstrap-sidebar
project_urls =
    Bug Tracker = https://github.com/paulino/django-bootstrap-sidebar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = bootstrapsidebar
python_requires = >=3.6
include_package_data = True
