[metadata]
name = django-bootstrap-sidebar
version = 1.2.8
license = Apache-2.0
author = Paulino Ruiz de Clavijo Vázquez
author_email = pruiz@us.es
description = Bootstrap 5.3 template for Django 5 and 6
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paulino/django-bootstrap-sidebar
project_urls =
    Bug Tracker = https://github.com/paulino/django-bootstrap-sidebar/issues
    GitHub= https://github.com/paulino/django-bootstrap-sidebar/
    Changelog = https://github.com/paulino/django-bootstrap-sidebar/blob/master/CHANGELOG.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = bootstrapsidebar
python_requires = >=3.6
include_package_data = True
